--- a/lab1/styles.css
+++ b/lab1/styles.css
@@ -5,6 +5,31 @@ body {
     padding: 20px;
 }
 
+.tabs {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+    background-color: #464444; /* Black background color */
+    padding: 10px;
+    border-radius: 5px;
+}
+.tab {
+    margin: 0 10px;
+    padding: 10px 15px;
+    background-color: #f4f4f4;
+    cursor: pointer;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+}
+.tab.active {
+    background-color: #5cb85c;
+    color: white;
+}
+.tab:hover {
+    background-color: #4cae4c;
+    color: white;
+}
+
 header {
     text-align: center;
     margin-bottom: 20px;
